Fix structure website

--- a/content/notes/AD/C2.md
+++ b/content/notes/AD/C2.md
@@ -13,7 +13,7 @@ seo:
   canonical: "" # custom canonical URL (optional)
   robots: "" # custom robot tags (optional)
 ---
-
+## Sliver
 - Generate a shell code (session) : 
 ```sh
 profiles new --mtls 10.8.3.12 --format shellcode win-shellcode
